# JointTrack

./: CMakeLists.txt  README.txt  dosthreads.cpp  jointtracker.backup.cpp  jointtracker.cpp  jointtracker.h  testspeed.cpp  xdo.h  xdotool.h
trashbin/: OUTDATED_CMakeLists_X11.txt.back  OUTDATED_aruco_test.cpp  OUTDATED_aruco_test.h  OUTDATED_jointtracker_X11.cpp.back  testSpeedXdo
