cmake_minimum_required(VERSION 2.8)
project(aruco_JointTracker)
if(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()
#find_library(lib1_location libxdo.so)
#message("Lib1 is at: ${lib1_location}")
include_directories(/home/myname/glm /usr/includes/X11 )
SET(CMAKE_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/lib/cmake/ )
#SET(XDO_PATH "/home/caldor/gazetrack/xdotool-master/")
#add_library(foo STATIC $(XDO_PATH) )
#add_library(myObjects OBJECT ${XDO_PATH} xdotool.o)
find_package(aruco REQUIRED )
add_executable(JointTracker jointtracker.cpp)
target_link_libraries(JointTracker  ${aruco_LIBS} -lxdo)#${lib1_location}) # -pthread
add_executable(TestSpeed testspeed.cpp)
target_link_libraries(TestSpeed  ${aruco_LIBS} -lxdo)
#add_executable(DosThreads dosthreads.cpp)
#target_link_libraries(DosThreads  ${aruco_LIBS} -pthread)
#target_link_libraries(lib2 LINK_PUBLIC ${lib1_location})
